SAM-1639 use effcient Object creation
git-svn-id: https://source.sakaiproject.org/svn/sam/trunk@106453 66ffb92e-73f9-0310-93c1-f5514f145a0a