@@ -741,7 +741,7 @@ public class PublishedItemData
 		  }
 	  }
 	  for (int k=0; k< stringList.size(); k++){
-		  columnIndexList.add(new Integer(k));
+		  columnIndexList.add(Integer.valueOf(k));
 	  }
 	  return columnIndexList;
   }
